--- a/servicios.html
+++ b/servicios.html
@@ -75,8 +75,8 @@
 	</section>
 	<section class="servicios" class="fondo">
 	<ul>
-		<li class="servicios">Tasaciones</li>
-		<li class="servicios">Asesoramiento
+		<li class="servicios">Tasaciones:<p class="textoServicios">El precio justo es nuestro objetivo de tasación, un precio que permita vender su propiedad en un plazo razonable de tiempo y dentro de la realidad actual del mercado.</p></li>
+		<li class="servicios">Asesoramiento <p class="textoServicios">Brindamos el mejor y más amplio asesoramiento  para que todo el proceso de tus operaciones esté realizado del mejor modo.</p>
 			<ul>
 				<li class="serviciosInterno">Contable</li>
 				<li class="serviciosInterno">Comercial</li>
@@ -85,8 +85,8 @@
 				
 			</ul>
 		</li>
-		<li class="servicios">Administración de alquileres</li>
-		<li class="servicios">Operaciones Inmobiliarias
+		<li class="servicios">Administración de alquileres <p class="textoServicios">Nos encargamos de administrar tus alquileres para que no haya necesidad de estar en contacto con inquilinos.</p></li>
+		<li class="servicios">Operaciones Inmobiliarias <p class="textoServicios">Tenemos vasta experiencia en todo tipo de operaciones.</p>
 			<ul>
 				<li class="serviciosInterno">Compra y venta</li>
 				<li class="serviciosInterno">Alquileres</li>
@@ -100,49 +100,44 @@
 
 	<footer>
 		<div class="row">
-			<div class="col-12">
-				<section class="redessociales redessociales--1">
-					<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
-						<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">AGREGANOS</p>
-					</a>
-					<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
-						<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">SEGUINOS</p>
-					</a>
-					<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
-						<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">BUSCANOS</p>
-					</a>
-					<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
-						<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
-						<p class="redessociales__texto">ACOMPAÑANOS</p>
-					</a>
-				</section>
-				  </div>
-					</div>
-				<section>
-					<div class="row">
-						<div class="col-12">
-						<div class="card2 bg-dark text-white">
-						  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
-						  <div class="card-img-overlay">
-						  	<h5 class="card-title">NUESTROS DATOS</h5>
-						    <p class="card-text">Dirección:</p>
-							<p class="card-text">Mail:</p>
-							<p class="card-text">Teléfono:</p>
-							<p class="card-text">Whatsapp:</p></p>
-						    <p class="card-text2"><strong> Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario</strong></p>
-						  </div>
-					</div>
-				</section>
-					<div class="row">
-						<div class="col-12">
-							<div class="leyenda">
-							<p class="leyenda__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae optio, perferendis! Voluptas, repudiandae veniam ratione enim inventore ex, quam distinctio tenetur, odit laborum iusto, unde sunt reiciendis rem officiis sapiente, unde reiciendis.</p></div>
-					</div>
+		<div class="col-12">
+		<section class="redessociales redessociales--1">
+			<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
+				<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
+			</a>
+			<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
+				<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
+			</a>
+			<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
+				<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
+			</a>
+			<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
+				<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
+			</a>
+		</section>
+		  </div>
 			</div>
-		</div>
+		<section>
+			<div class="row">
+				<div class="col-12">
+				<div class="card2 bg-dark text-white">
+				  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
+				  <div class="card-img-overlay">
+				  	<h5 class="card-title">COAS PROPIEDADES</h5>
+				    <p class="card-text">Dirección:  &nbsp;&nbsp;Av. San Juan 930</p>
+					<p class="card-text">Mail: &nbsp;&nbsp;coas_prop@hotmail.com</p>
+					<p class="card-text">Teléfono:&nbsp;&nbsp;49236959</p>
+					<p class="card-text">Whatsapp:&nbsp;&nbsp;1151654385</p></p>
+				  </div>
+			</div>
+		</section>
+			<div class="row">
+				<div class="col-12">
+					<div class="leyenda">
+					<p class="leyenda__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae optio, perferendis! Voluptas, repudiandae veniam ratione enim inventore ex, quam distinctio tenetur, odit laborum iusto, unde sunt reiciendis rem officiis sapiente, unde reiciendis.</p>
+					</div>
+				</div>
+			</div>
 	</footer>
 </body>
 </html>
