--- a/propiedades.html
+++ b/propiedades.html
@@ -70,158 +70,131 @@
 		<h1 class="TituloDePagina" class="bordesredondeados">Propiedades </h1>
 		
 	</section>
-	<div class="grid">
-		<div class="grid__a">
-			<p><strong>RAMÓN FALCÓN 2300</strong></p>
-
-			<p>Flores</p>
-
-			<p>Alquiler</p>
-
-			<p>Departamento</p>
-
-			<p>3 ambientes</p>
-		</div>
-
-		<div class="grid__b">
-			<p><strong>CASTRO BARROS 1100</strong></p>
-
-			<p>Boedo</p>
-
-			<p>Alquiler</p>
-
-			<p>Departamento</p>
-
-			<p>2 ambientes</p>
-		</div>
-		<div class="grid__c">
-			<p><strong>AV. SAN JUAN 2200</strong></p>
-
-			<p>Balvanera</p>
-
-			<p>Venta</p>
-
-			<p>Departamento</p>
-
-			<p>2 ambientes</p>
-		</div>
-		<div class="grid__d">
-			<p><strong>BEAUCHEF 300</strong></p>
-
-			<p>Caballito</p>
-
-			<p>Venta</p>
-
-			<p>Departamento</p>
-
-			<p>4 ambientes</p>
-		</div>
-			<div class="grid__e">
-			<p><strong>MUÑIZ 1000</strong></p>
-
-			<p>Boedo</p>
-
-			<p>Venta</p>
-
-			<p>Departamento</p>
-
-			<p>2 ambientes</p>
-		</div>
-		<div class="grid__f">
-			<p><strong>VELASCO 400</strong></p>
-
-			<p>Villa Crespo</p>
-
-			<p>Venta</p>
-
-			<p>Ph</p>
-
-			<p>3 ambientes</p>
-		</div>
-			<div class="grid__g">
-			<p><strong>MUÑIZ 1000</strong></p>
-
-			<p>Boedo</p>
-
-			<p>Venta</p>
-
-			<p>Departamento</p>
-
-			<p>2 ambientes</p>
-		</div>
-		<div class="grid__h">
-			<p><strong>VELASCO 400</strong></p>
-
-			<p>Villa Crespo</p>
-
-			<p>Venta</p>
-
-			<p>Ph</p>
-
-			<p>3 ambientes</p>
-
-		</div>
-		<div class="grid__i">
-			<p><strong>VELASCO 400</strong></p>
-
-			<p>Villa Crespo</p>
-
-			<p>Venta</p>
-
-			<p>Ph</p>
-
-			<p>3 ambientes</p>
-
-		</div>
-	</div>
+	<div class="container bcontent">
+        <div class="card" class="xx" style="width: 80%;" class="margen">
+            <div class="row no-gutters">
+                <div class="col-sm-5" id="padre">
+                	<p class="card-arriba2">ALQUILER</p>
+                	<p class="card-abajo">$22.000</p>
+                    <img class="card-img" src="img/depto2.jpg" alt="depto2">
+                </div>
+                <div class="col-sm-7">
+                    <div class="card-body">
+                        <h5 class="card-title">Departamento - Boedo</h5>
+                        <p class="card-text"> <img src="img/lugar.png" alt="lugar"> &nbsp; Av. San Juan 2300</p>
+                        <img class="card-img" src="img/iconos.jpg" alt="iconos">
+                        <br><br><br><br>
+                        <a href="#" class="btn2 btn-primary">VER FICHA</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container bcontent">
+        <div class="card" class="xx" style="width: 80%;" class="margen">
+            <div class="row no-gutters">
+                <div class="col-sm-5" id="padre">
+                	<p class="card-arriba2">ALQUILER</p>
+                	<p class="card-abajo">$19.000</p>
+                    <img class="card-img" src="img/depto1.jpg" alt="depto2">
+                </div>
+                <div class="col-sm-7">
+                    <div class="card-body">
+                        <h5 class="card-title">Departamento - Boedo</h5>
+                        <p class="card-text"> <img src="img/lugar.png" alt="lugar"> &nbsp; Castro Barros 1140</p>
+                        <img class="card-img" src="img/iconos.jpg" alt="iconos">
+                        <br><br><br><br>
+                        <a href="#" class="btn2 btn-primary">VER FICHA</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container bcontent">
+        <div class="card" class="xx" style="width: 80%;" class="margen">
+            <div class="row no-gutters">
+                <div class="col-sm-5" id="padre">
+                	<p class="card-arriba2">ALQUILER</p>
+                	<p class="card-abajo">$17.000</p>
+                    <img class="card-img" src="img/depto3.jpg" alt="depto2">
+                </div>
+                <div class="col-sm-7">
+                    <div class="card-body">
+                        <h5 class="card-title">Departamento - Villa Ortuzar</h5>
+                        <p class="card-text"> <img src="img/lugar.png" alt="lugar"> &nbsp; Av. Triunvirato 3200</p>
+                        <img class="card-img" src="img/iconos.jpg" alt="iconos">
+                        <br><br><br><br>
+                        <a href="#" class="btn2 btn-primary">VER FICHA</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	<div>
+	<div class="container bcontent">
+        <div class="card" class="xx" style="width: 80%;" class="margen">
+            <div class="row no-gutters">
+                <div class="col-sm-5" id="padre">
+                	<p class="card-arriba2">VENTA</p>
+                	<p class="card-abajo">USD 74.000</p>
+                    <img class="card-img" src="img/depto3.jpg" alt="depto2">
+                </div>
+                <div class="col-sm-7">
+                    <div class="card-body">
+                        <h5 class="card-title">Departamento - Boedo</h5>
+                        <p class="card-text"> <img src="img/lugar.png" alt="lugar"> &nbsp; Av. San Juan 2300</p>
+                        <img class="card-img" src="img/iconos.jpg" alt="iconos">
+                        <br><br><br><br>
+                        <a href="#" class="btn2 btn-primary">VER FICHA</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 	<div>
 		<p class="ParrafoPrincipal"> <strong>Las ubicaciones de esta ficha son aproximadas, las exactas saldrán del correspondiente titulo de propiedad.</strong></p>
 	</div>
 	<footer>
 		<div class="row">
-			<div class="col-12">
-				<section class="redessociales redessociales--1">
-					<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
-						<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">AGREGANOS</p>
-					</a>
-					<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
-						<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">SEGUINOS</p>
-					</a>
-					<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
-						<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">BUSCANOS</p>
-					</a>
-					<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
-						<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
-						<p class="redessociales__texto">ACOMPAÑANOS</p>
-					</a>
-				</section>
-				  </div>
-					</div>
-				<section>
-					<div class="row">
-						<div class="col-12">
-						<div class="card2 bg-dark text-white">
-						  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
-						  <div class="card-img-overlay">
-						  	<h5 class="card-title">NUESTROS DATOS</h5>
-						    <p class="card-text">Dirección:</p>
-							<p class="card-text">Mail:</p>
-							<p class="card-text">Teléfono:</p>
-							<p class="card-text">Whatsapp:</p></p>
-						    <p class="card-text2"><strong> Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario</strong></p>
-						  </div>
-					</div>
-				</section>
-					<div class="row">
-						<div class="col-12">
-							<div class="leyenda">
-							<p class="leyenda__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae optio, perferendis! Voluptas, repudiandae veniam ratione enim inventore ex, quam distinctio tenetur, odit laborum iusto, unde sunt reiciendis rem officiis sapiente, unde reiciendis.</p></div>
-					</div>
+		<div class="col-12">
+		<section class="redessociales redessociales--1">
+			<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
+				<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
+			</a>
+			<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
+				<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
+			</a>
+			<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
+				<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
+			</a>
+			<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
+				<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
+			</a>
+		</section>
+		  </div>
 			</div>
-		</div>
+		<section>
+			<div class="row">
+				<div class="col-12">
+				<div class="card2 bg-dark text-white">
+				  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
+				  <div class="card-img-overlay">
+				  	<h5 class="card-title">COAS PROPIEDADES</h5>
+				    <p class="card-text">Dirección:  &nbsp;&nbsp;Av. San Juan 930</p>
+					<p class="card-text">Mail: &nbsp;&nbsp;coas_prop@hotmail.com</p>
+					<p class="card-text">Teléfono:&nbsp;&nbsp;49236959</p>
+					<p class="card-text">Whatsapp:&nbsp;&nbsp;1151654385</p></p>
+				    <p class="card-text2"><strong> Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario</strong></p>
+				  </div>
+			</div>
+		</section>
+			<div class="row">
+				<div class="col-12">
+					<div class="leyenda">
+					<p class="leyenda__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae optio, perferendis! Voluptas, repudiandae veniam ratione enim inventore ex, quam distinctio tenetur, odit laborum iusto, unde sunt reiciendis rem officiis sapiente, unde reiciendis.</p>
+					</div>
+				</div>
+			</div>
 	</footer>
 </body>
 </html>
