--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 					<img src="img/twitter2.png" alt="pagina de twitter" width="40px" height="40px"></a>
 					</li>
 				</ul>
-			</nav>
 				  </div>
 				</nav>
 			</div>
@@ -73,8 +72,11 @@
 			<div class="col-12">
 				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 				  <div class="carousel-indicators">
-				  	<div class="col-xl-12 col-md-12 col-sm-8 col-xs-8">
+				  	<div class="col-12">
 					  	<div class="input-group mb-3">
+					  	<div>
+					  			<h2>Hace 50 años brindando el más amplio asesoramiento.</h2>
+					  		</div>	
 						    <div class="input-group-prepend">
 							    <button class="btn btn-outline-secondary" type="button">ALQUILER</button>
 							    <button class="btn btn-outline-secondary" type="button">VENTA</button>
@@ -86,7 +88,7 @@
 									    <option value="3">Almagro</option>
 									    <option value="3">Otro</option>
 							</select>
-							<button class="botonazo" type="button">BUSCAR</button>
+							<button class="botonazo" type="button">BUSCAR</button>	
 						</div>
 					</div>
 				  </div>
@@ -205,37 +207,30 @@
             </div>
 	</section>
 	<footer>
-		<div class="row">
-		<div class="col-12">
-		<section class="redessociales redessociales--1">
-			<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
-				<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
-			</a>
-			<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
-				<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
-			</a>
-			<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
-				<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
-			</a>
-			<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
-				<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
-			</a>
-		</section>
-		  </div>
-			</div>
 		<section>
 			<div class="row">
 				<div class="col-12">
-				<div class="card2 bg-dark text-white">
-				  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
-				  <div class="card-img-overlay">
-				  	<h5 class="card-title">COAS PROPIEDADES</h5>
-				    <p class="card-text">Dirección:  &nbsp;&nbsp;Av. San Juan 930</p>
-					<p class="card-text">Mail: &nbsp;&nbsp;coas_prop@hotmail.com</p>
-					<p class="card-text">Teléfono:&nbsp;&nbsp;49236959</p>
-					<p class="card-text">Whatsapp:&nbsp;&nbsp;1151654385</p></p>
-				    <p class="card-text2"><strong> Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario</strong></p>
-				  </div>
+					<div>
+					  <img src="img/skylinetira4.jpg" class="card-img" alt="skylinetira" height="180vh">
+					  	<div class="card-img-overlay">
+						  	<section class="redessoc2">
+								<a href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
+								<img src="img/fb3.png" alt="pagina de fb" width="40px" height="40px"></a>
+								<a href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
+								<img src="img/insta3.png" alt="pagina de instagram" width="40px" height="40px"></a>
+								<a  href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
+								<img src="img/pinterest3.png" alt="pagina de pinterest" width="40px" height="40px"></a>
+								<a  href="https://twitter.com/home?lang=es" target="_blank">
+								<img src="img/twitter3.png" alt="pagina de twitter" width="40px" height="40px"></a>
+							</section>
+							<h5 class="card-title">COAS PROPIEDADES</h5>
+						    <div><p class="card-text3"><img src="img/dire.png" alt="iconodire"> &nbsp;Av. San Juan 930</p></div>
+							<div><p class="card-text3"><img src="img/mail.png" alt="iconodire"> &nbsp;coas_prop@hotmail.com</p></div>
+							<div><p class="card-text3"><img src="img/wtpp.png" alt="iconodire"> &nbsp;49236959</p></div>
+							<div><p class="card-text3"><img src="img/tel.png" alt="iconodire"> &nbsp;1151654385</p></div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 			<div class="row">
