--- a/nosotros.html
+++ b/nosotros.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+	<div class="container-fluid">
 	<header>
 		<div class="row">
 			<div class="col-12">
@@ -111,55 +112,49 @@
 					Las 3 razones para elegirnos son: </strong></p>
 			</div>
 			<div>
-					<ol>
+					<ul>
 
 						<li class="servicios">Nuestros conocimientos en los negocios inmobiliarios y la continuidad ininterrumpida en la zona permitió con el correr de los años, que tanto clientes, vecinos y también colegas, reconozcan a Coas Propiedades como una inmobiliaria de prestigio y seriedad.</li>
 
 						<li class="servicios">Nuestro sistema de trabajo se basa en el asesoramiento personalizado, ya sea para la compra, venta o alquiler de inmuebles, dicho asesoramiento no acaba con la concreción de la operación, sino también incluye un acompañamiento en todo el proceso (boleto, escritura, contrato de alquiler, etc,).</li>
 
 						<li class="servicios">Con la experiencia y trayectoria del personal especializado y a la vez con personal joven y dinámico contamos con todas las herramientas y conocimientos  del mercado actual, con mas de 40 años Coas Propiedades, brinda el mejor servicio para poder cumplir con el deseo del cliente..</li>
-					</ol>
+					</ul>
 			</div>
 				<p><strong>
 					Socios: </strong></p>
 			</div>
 		</div>
 		<section id="socios">
-			<img src="img/persona1.png" alt="socio1">
-			<img src="img/persona2.png" alt="socio2">
-			<img src="img/persona3.png" alt="socio3">
+			<img src="img/persona4.png" alt="socio2" class="circulos">
+			<img src="img/persona4.png" alt="socio2" class="circulos2">
+			<img src="img/persona4.png" alt="socio2" class="circulos3">
 		</section>
 	<footer>
-		<div class="row">
-			<div class="col-12">
-				<section class="redessociales redessociales--1">
-					<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
-						<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
-					</a>
-					<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
-						<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
-					</a>
-					<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
-						<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
-					</a>
-					<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
-						<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
-					</a>
-				</section>
-			</div>
-		</div>
 		<section>
 			<div class="row">
 				<div class="col-12">
-				<div class="card2 bg-dark text-white">
-				  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
-				  <div class="card-img-overlay">
-				  	<h5 class="card-title">COAS PROPIEDADES</h5>
-				    <p class="card-text">Dirección:  &nbsp;&nbsp;Av. San Juan 930</p>
-					<p class="card-text">Mail: &nbsp;&nbsp;coas_prop@hotmail.com</p>
-					<p class="card-text">Teléfono:&nbsp;&nbsp;49236959</p>
-					<p class="card-text">Whatsapp:&nbsp;&nbsp;1151654385</p></p>
-				  </div>
+					<div>
+					  <img src="img/skylinetira4.jpg" class="card-img" alt="skylinetira" height="180vh">
+					  	<div class="card-img-overlay">
+						  	<section class="redessoc2">
+								<a href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
+								<img src="img/fb3.png" alt="pagina de fb" width="40px" height="40px"></a>
+								<a href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
+								<img src="img/insta3.png" alt="pagina de instagram" width="40px" height="40px"></a>
+								<a  href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
+								<img src="img/pinterest3.png" alt="pagina de pinterest" width="40px" height="40px"></a>
+								<a  href="https://twitter.com/home?lang=es" target="_blank">
+								<img src="img/twitter3.png" alt="pagina de twitter" width="40px" height="40px"></a>
+							</section>
+							<h5 class="card-title">COAS PROPIEDADES</h5>
+						    <div><p class="card-text3"><img src="img/dire.png" alt="iconodire"> &nbsp;Av. San Juan 930</p></div>
+							<div><p class="card-text3"><img src="img/mail.png" alt="iconodire"> &nbsp;coas_prop@hotmail.com</p></div>
+							<div><p class="card-text3"><img src="img/wtpp.png" alt="iconodire"> &nbsp;49236959</p></div>
+							<div><p class="card-text3"><img src="img/tel.png" alt="iconodire"> &nbsp;1151654385</p></div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 			<div class="row">
@@ -170,6 +165,7 @@
 				</div>
 			</div>
 	</footer>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
